# pilkki

./: .gitmodules  CMakeLists.txt  Readme.md
.github/workflows/: cmake-multi-platform.yml  pilkki-software-multiplatform.yml
electronics/: pilkki.kicad_pcb  pilkki.kicad_pro  pilkki.kicad_sch
firmware/: .gitignore  CMakeLists.txt  Pilkki.ioc  STM32G431KBUX_FLASH.ld
firmware/Core/Inc/: main.h  stm32g4xx_hal_conf.h  stm32g4xx_it.h
firmware/Core/Src/: gpio.c  main.c  rng.c  stm32g4xx_it.c  usart.c
firmware/Core/programmer/: dap.c  dap.h  efm32.h  efm32_devinfo.h  efm32_msc.h  errors.h  use_flashloader.c  use_flashloader.h  utils.h
firmware/Loader/: LoaderBin.h
firmware/Loader/EfmLoader/: EFM32PG23B200F512IM40_sram.lds  gcc_Debug.h  gcc_Release.h  startup_efm32pg23.c
firmware/Loader/EfmLoader/User/: LEDBlink.c  flashloader.c  flashloader.h
firmware/ProgG4/: gcc_Debug.h  gcc_Release.h
firmware/USB_Device/App/: usb_device.h  usbd_cdc_if.c  usbd_cdc_if.h
firmware/app/: CMakeLists.txt  adc.c  crc.c  dap.h  debug_lock.c  fake_payload.c  flash_write.c  flash_write.h  main.c  payload.h  payload_bindings.c  spi.c  unlock_gecko.c  use_flashloader.c  use_flashloader.h  utils.c
firmware/cmake/: FindArmToolchainBackup.cmake  FindMCU.cmake
firmware/common/: CMakeLists.txt  flashloader.h
firmware/drivers/: CMakeLists.txt
firmware/drivers/cmsis/: CMakeLists.txt
firmware/drivers/hal/: CMakeLists.txt  stm32g4xx_hal_def.h
firmware/drivers/usb/: CMakeLists.txt  usb_device.c  usbd_cdc.c  usbd_cdc_if.h  usbd_conf.h
firmware/targets/: CMakeLists.txt
firmware/targets/efm32pg23/: CMakeLists.txt
firmware/targets/efm32pg23/cmake/: FindArmToolchainBackup.cmake  FindMCU.cmake
firmware/targets/efm32pg23/src/: CMakeLists.txt  flashloader.c  flashloaderr.h
software/: .gitignore  CMakeLists.txt  Readme.md  flake.nix
software/src/: autodetect_linux.cpp  autodetect_mac.cpp  pilkki.cpp  serial.hpp  serial_linux.cpp  serial_mac.cpp  serial_unix.cpp  serial_win.cpp
src/: flasher.cpp
